# ChangeLog for net-p2p/qbittorrent
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/qbittorrent/ChangeLog,v 1.123 2010/11/21 16:48:53 hwoarang Exp $

*qbittorrent-2.5.0_beta6 (21 Nov 2010)

  21 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.5.0_beta4.ebuild, +qbittorrent-2.5.0_beta6.ebuild:
  Version bump

*qbittorrent-9999 (20 Nov 2010)
*qbittorrent-2.5.0_beta4 (20 Nov 2010)

  20 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.5.0_beta1.ebuild, +qbittorrent-2.5.0_beta4.ebuild,
  +qbittorrent-9999.ebuild:
  Version bump. Introduce live ebuild. Thanks to Ishan Arora
  <ishanarora@gmail.com>

*qbittorrent-2.4.10 (11 Nov 2010)

  11 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.4.9.ebuild, +qbittorrent-2.4.10.ebuild:
  Version bump

*qbittorrent-2.4.9 (01 Nov 2010)

  01 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.3.0.ebuild, -qbittorrent-2.3.1.ebuild,
  -qbittorrent-2.4.7.ebuild, -qbittorrent-2.4.8.ebuild,
  +qbittorrent-2.4.9.ebuild:
  Version bump. Remove old ebuilds

*qbittorrent-2.4.8 (25 Oct 2010)

  25 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.4.6.ebuild, +qbittorrent-2.4.8.ebuild:
  Version bump

*qbittorrent-2.4.7 (19 Oct 2010)

  19 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  +qbittorrent-2.4.7.ebuild:
  Version bump

*qbittorrent-2.5.0_beta1 (17 Oct 2010)
*qbittorrent-2.4.6 (17 Oct 2010)

  17 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.4.4.ebuild, -qbittorrent-2.4.5.ebuild,
  +qbittorrent-2.4.6.ebuild, +qbittorrent-2.5.0_beta1.ebuild:
  Version bump

*qbittorrent-2.4.5 (13 Oct 2010)

  13 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  +qbittorrent-2.4.5.ebuild:
  Version bump

*qbittorrent-2.4.4 (03 Oct 2010)

  03 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  -qbittorrent-2.4.2.ebuild, -qbittorrent-2.4.3.ebuild,
  +qbittorrent-2.4.4.ebuild: