@@ -3,17 +3,19 @@ Hash: SHA1
 
 DIST qbittorrent-2.2.11.tar.gz 2727964 RMD160 96e81471d0993c068b3b87c13ffa7b1d7d6ef3f2 SHA1 ef6c267acb3ff5b2a1c5951b2e6de88ce9b1f7ef SHA256 20a8b1c403048da89d73ce59ac95a8f2ffe2777c97f8f23bded63ac0027794d7
 DIST qbittorrent-2.4.10.tar.gz 2577586 RMD160 d15f0497a54ebb84a9ed2d04bc601d9dcd93e704 SHA1 aa54bf3e43bb36127bcf5feb994e815a403261f0 SHA256 a39104f3992f51f7fbb63a42554b7cdf1eee13527588a14a0021dc3d385136a1
-DIST qbittorrent-2.5.0beta6.tar.gz 2729337 RMD160 9659ffe0364ac169228730b706dcb27b93d0ed27 SHA1 546a8f98510155f6e759fe944a10591f679973ec SHA256 7ecde001d63088ef0639932cc1032bad96e17f3b505ba6f99fa0a34af55163a1
+DIST qbittorrent-2.4.11.tar.gz 2578039 RMD160 d2278bde471ccf031abc581a959c2726dd7cf91b SHA1 2b2ec1ec8a4009d8d924bae50c8b11cae5e75e1a SHA256 f6d863e7b20dcc7cb4c454b8e09e8633cbc2e7a0cd606c5972f2707b148d308b
+DIST qbittorrent-2.5.0beta7.tar.gz 2733661 RMD160 08ab5b47cecb9ec093397f5ea3644bfa40974b2c SHA1 2039fd1df5d48e78307f7ee4c8c7b792adf7a0dd SHA256 c02cd18fa7e0cdafdb88d16da7edf631b4f40e5bc27283b7eb40fb798b07e169
 EBUILD qbittorrent-2.2.11.ebuild 1681 RMD160 d9bc680590ce1751d5411b51aa82fec4c714195a SHA1 4884f7865d99778ba01835275022541ebfa4ca26 SHA256 cadc4893aff16dad7e93693bd9707ab1f7e61924b24dd357aa82fc8701237a82
 EBUILD qbittorrent-2.4.10.ebuild 1748 RMD160 b8b6061a5349ff166067362d8aa717db7252dcdc SHA1 798c7f52e75ac2ee7bb78184f033db7dcf33d3f9 SHA256 987d1439dd89f77f41a241b163fbda38c26f3b0e1768a18cdaadf21eddd298a6
-EBUILD qbittorrent-2.5.0_beta6.ebuild 1753 RMD160 f42263293fb5f001182beef45b308a119f7858fa SHA1 3aa11743c210960ec7fbfb1a93f227430b8a012c SHA256 af47add2c08fb36348ee85fbbc779345df0918b457f034da315156e065f9234f
+EBUILD qbittorrent-2.4.11.ebuild 1748 RMD160 6a7506a9b097f90754ea2a284d77c99d4f604bbf SHA1 49f471f7b39283a3afdfa1b3f1ebce50bb8d9c93 SHA256 9c5511f4fe22cc45c62a530c12e07a95ce4ae65bd928bc71c75f99cde9951e0e
+EBUILD qbittorrent-2.5.0_beta7.ebuild 1753 RMD160 781673389e6125f6d5c69f3b3ae90207bb5bc6cb SHA1 2a68981533a6cfc5cea1e44019293e28a0881ef5 SHA256 c16b69ca331b314b397a63f57b96366f0fff3288dafec7aa48d5cdb25f924d8b
 EBUILD qbittorrent-9999.ebuild 1738 RMD160 dc75affd777166f0b778a1e20ac1789a6e65fb5b SHA1 f96260d15cebc1a2a37bf56052e6fe4e1173ff90 SHA256 ff765d43f6254847e1179403428f41f0e0bdb134c2e521050883c7ee5f822b7b
-MISC ChangeLog 21146 RMD160 06eebbb1295a6530fb6da0d7769b107624fc67a6 SHA1 10a7504ad6533ec08d7c82372a5239f48fe98ba3 SHA256 0034f52bc425aeb4561b025496337948c6339ed5f5fbcced1cfe7418ffa6c414
+MISC ChangeLog 21387 RMD160 9af29ea13477d317c54dbc5d9447e32ff8bed81d SHA1 af43e905024cc129ac31d962f7e62e8a79271afe SHA256 b3106de826ad98267021347f109a734e36de8d315c240b52ce98f9e0159a3023
 MISC metadata.xml 280 RMD160 25c947a1034c150a136911351c7da9ed8783ee44 SHA1 17a16b5a0ddc3de88d81a1493cd5cb4c1aa795aa SHA256 07e3116f2c52c06760e21dc1b8bd3b318b7d9a140fb1b8942736aedd0d750b73
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzpTaEACgkQ9/cejkQaxBATogCdFdg8SeH4v6eXheIX8+sdb3Op
-E7IAn2q9yIus1qEs6IsmWnRENGkwQ1TZ
-=LZU4
+iEYEARECAAYFAkzrIzAACgkQ9/cejkQaxBAiKACfcXG8ipofuS7I6W09MlkwKLte
+suoAn08/A5mFROnVV1NpyueT8T0gFsYO
+=WuLe
 -----END PGP SIGNATURE-----
